Finalisation des test unitaires et correction